--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
 }
 
 nav{
-    margin-top: 40px;
+    margin-top: 90px;
     margin-left: auto;
     padding:20px 70px;
     display: flex;
@@ -75,7 +75,7 @@ nav a{
 .btn:hover{
     text-decoration: underline;
     color: rgb(129, 51, 51);
-    transform:  translateY(-3px);
+    transform:scale(1.1)  translateY(-3px);
 
 }
 
